# reform

./: .gitignore  README.md  cabal.haskell-ci  default.nix  reform.cabal  shell.nix
.github/workflows/: haskell-ci.yml
Text/Reform/: Core.hs  Generalized.hs  Proof.hs  Result.hs
tests/: Tests.hs
