Name:                reform
Version:             0.2.7.1
Synopsis:            reform is a type-safe HTML form generation and validation library
Description:         reform follows in the footsteps of formlets and
                     digestive-functors <= 0.2. It provides a
                     type-safe and composable method for generating
                     an HTML form that includes validation.
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw, Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, Jasper Van der Jeugt, SeeReason Partners LLC
Category:            Web
Build-type:          Simple
Homepage:            http://www.happstack.com/
Cabal-version:       >=1.6
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3

source-repository head
    type:     git
    location: https://github.com/Happstack/reform.git

Library
  Exposed-modules:     Text.Reform
                       Text.Reform.Backend
                       Text.Reform.Core
                       Text.Reform.Generalized
                       Text.Reform.Proof
                       Text.Reform.Result
  Build-depends:       base             >= 4    && < 5,
                       bifunctors       >= 5.4  && < 5.5,
                       containers       >= 0.4  && < 0.6,
                       mtl              >= 2.0  && < 2.3,
                       text             >= 0.11 && < 1.3

Test-Suite reform-tests
  Type: exitcode-stdio-1.0
  Main-Is: tests/Tests.hs
  Build-depends: base >= 4 && < 5,
                 checkers >= 0.4 && < 0.5,
                 derive  >= 2.5 && < 2.6,
                 hspec >= 2.2 && < 2.5,
                 QuickCheck >= 2.8 && < 2.10
